--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -67,7 +67,6 @@ tag = 'monthly-2021-12'
 version = '4.0.0-dev'
 
 [dependencies.hex-literal]
-optional = true
 version = '0.3.1'
 
 [dependencies.pallet-aura]
@@ -189,6 +188,12 @@ git = 'https://github.com/paritytech/substrate.git'
 tag = 'monthly-2021-12'
 version = '4.0.0-dev'
 
+[dependencies.pallet-assets]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'monthly-2021-12'
+version = '4.0.0-dev'
+
 [features]
 default = ['std']
 runtime-benchmarks = [
@@ -196,8 +201,8 @@ runtime-benchmarks = [
     'frame-support/runtime-benchmarks',
     'frame-system-benchmarking',
     'frame-system/runtime-benchmarks',
-    'hex-literal',
     'pallet-balances/runtime-benchmarks',
+    'pallet-assets/runtime-benchmarks',
     'pallet-xyk/runtime-benchmarks',
     'pallet-timestamp/runtime-benchmarks',
     'sp-runtime/runtime-benchmarks',
@@ -210,6 +215,7 @@ std = [
     'frame-system-rpc-runtime-api/std',
     'frame-system/std',
     'pallet-aura/std',
+    'pallet-assets/std',
     'pallet-balances/std',
     'pallet-grandpa/std',
     'pallet-randomness-collective-flip/std',
